[gd_scene load_steps=3 format=3 uid="uid://bkpe8wpw4v66g"]

[ext_resource type="Script" uid="uid://qqli0du32jje" path="res://control.gd" id="1_nyaxk"]
[ext_resource type="Script" uid="uid://bwvjfxnrg1yh1" path="res://audio.gd" id="2_yjhda"]

[node name="AudioMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nyaxk")

[node name="Audio" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_yjhda")

[node name="VBoxContainer" type="VBoxContainer" parent="Audio"]
layout_mode = 0
offset_left = 255.0
offset_top = 114.0
offset_right = 817.0
offset_bottom = 417.0

[node name="MasterLabel" type="Label" parent="Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Master"

[node name="MasterSlider" type="HSlider" parent="Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="MusicLabel" type="Label" parent="Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="SFXLabel" type="Label" parent="Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="SaveButton" type="Button" parent="Audio"]
layout_mode = 2
offset_left = 255.0
offset_top = 455.0
offset_right = 817.0
offset_bottom = 486.0
text = "Save
"

[connection signal="mouse_exited" from="Audio/VBoxContainer/MasterSlider" to="Audio" method="_on_master_slider_mouse_exited"]
[connection signal="mouse_exited" from="Audio/VBoxContainer/MusicSlider" to="Audio" method="_on_music_slider_mouse_exited"]
[connection signal="mouse_exited" from="Audio/VBoxContainer/SFXSlider" to="Audio" method="_on_sfx_slider_mouse_exited"]
[connection signal="pressed" from="Audio/SaveButton" to="." method="_on_save_button_pressed"]
